--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
+<nav class="navbar navbar-default" style="background-color: #fffafa; margin-bottom: 10px;">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a routerLink="/" class="navbar-brand">Flickr</a>
+        </div>
+    </div>
+</nav>
 <div class="container-fluid">
     <router-outlet></router-outlet>
 </div>
